--- a/src/main/resources/templates/cart-show.html
+++ b/src/main/resources/templates/cart-show.html
@@ -56,16 +56,21 @@
 <body>
   <h2>Termék Lista</h2>
   <div class="card" data-th-each="p: ${products}">
+    <a data-th-href="@{${'/product/' + p.id}}">
     <img
           src="https://picsum.photos/id/234/200/300"
           data-th-src="${p.image}"
           data-th-alt="${p.name}"
     >
+    </a>
     <div class="card-content">
       <h3 data-th-text="${p.name}"></h3>
       <p>Leírás: Sétáló magnó a legkényelmesebb megoldás kazetták lejátszására gyalogos közlekedés során</p>
       <div class="price">[[${p.price}]] Ft</div>
     </div>
   </div>
+  <a href="/home">
+    <button>Vissza</button>
+  </a>
 </body>
 </html>
